--- a/playground/index.html
+++ b/playground/index.html
@@ -11,13 +11,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/addon/dialog/dialog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/addon/tern/tern.css">
     <link rel="stylesheet" href="./gibber.css">
+    <link rel="stylesheet" href="../barreiros/css/main.css">
     <link rel="icon" href="data:,">
 
     <script src='./bundle.js'></script>
     <script src='./jsdsp.js'></script>
+    <script src='../barreiros/js/utils.js'></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!--<script src='./babel.min.js'></script>-->
     <!--<script src='./gibberwocky.js'></script>-->
+
   </head>
 
   <body>
