--- a/playground/index.html
+++ b/playground/index.html
@@ -16,7 +16,7 @@
 
     <script src='./bundle.js'></script>
     <script src='./jsdsp.js'></script>
-    <script src='../barreiros/js/utils.js'></script>
+    <script type="module" src='../barreiros/js/main.js'></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <!--<script src='./babel.min.js'></script>-->
     <!--<script src='./gibberwocky.js'></script>-->
